--- a/fix.css
+++ b/fix.css
@@ -1,11 +1,13 @@
 @media (aspect-ratio: 16/9) {
-  .video-foreground, .video-background iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    transform: scale(1.08);
+  .video-foreground {
+    height: 300% !important;
+    top: -100% !important;
+    
+    width: 100% !important;
+    left: 0 !important;
+  }
+  
+  html {
+    scrollbar-width: none;
   }
 }
