--- a/fix.css
+++ b/fix.css
@@ -1,13 +1,18 @@
 @media (aspect-ratio: 16/9) {
   .video-foreground {
-    height: 300% !important;
-    top: -100% !important;
-    
     width: 100% !important;
     left: 0 !important;
+  }
+  
+  #vid-bac > p {
+    transform : translateY(60px);
   }
   
   html {
     scrollbar-width: none;
   }
+}
+
+#vid-bac > p {
+  transition: transform 1.2s ease-in-out;
 }
